--- a/main.html
+++ b/main.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <title>3 random videos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,400;1,700&display=swap"
+      rel="stylesheet"/>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  </head>
+  <body>
+    <!-- HTML Links -->
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+        <li><a href="#">About us</a></li>
 
-</body>
+        <li><a href="#">Contact us</a></li>
+    </nav>
 
+<video width="350" controls>
+<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+</video>
+
+<video width="350" controls> 
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"> 
+  </video>
+<video width="350"  controls>
+ <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+ </video>
+  </body>
 </html>
