--- a/main.html
+++ b/main.html
@@ -18,9 +18,10 @@
         <li><a href="#">About us</a></li>
 
         <li><a href="#">Contact us</a></li>
+      </ul>
     </nav>
-
-<video width="350" controls>
+<h1>3 random videos</h1>
+<video width="350" controls autoplay>
 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 </video>
 
@@ -30,5 +31,7 @@
 <video width="350"  controls>
  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
  </video>
+     <script type="text/javascript" src="./script.js">
+
   </body>
 </html>
